working on web test

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -1,5 +1,5 @@
 api_url=https://jsonplaceholder.typicode.com
 env=PROD
-PROD.home_url=https://www.amazon.com
+PROD.main_url=https://www.saucedemo.com/
 browser=chrome
 selenium_url=http://localhost:4444/wd/hub
