log in log out test implemented

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -5,7 +5,7 @@ env=PROD
 api_url=https://jsonplaceholder.typicode.com
 #
 # config for web testing
-PROD.main_url=https://www.saucedemo.com/
+PROD.base=https://www.saucedemo.com/
 browser=chrome
 selenium_url=http://localhost:4444/wd/hub
 #
