--- a/src/main/resources/_testdata.properties
+++ b/src/main/resources/_testdata.properties
@@ -1,2 +1,5 @@
 standard_user_username=standard_user
 standard_user_password=secret_sauce
+standard_user_first_name=John
+standard_user_last_name=Smith
+standard_user_postal_code=12-345
