finished web tests

--- a/src/main/resources/_testdata.properties
+++ b/src/main/resources/_testdata.properties
@@ -3,3 +3,5 @@ standard_user_password=secret_sauce
 standard_user_first_name=John
 standard_user_last_name=Smith
 standard_user_postal_code=12-345
+invalid_credentials_username=sdfskdfjkl
+invalid_credentials_password=fjskfsjdfklsj
