finished mobile clock test

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -7,13 +7,13 @@ api_url=https://jsonplaceholder.typicode.com
 # config for web testing
 PROD.base=https://www.saucedemo.com/
 browser=chrome
-selenium_url=http://localhost:4444/wd/hub
+#PROD.selenium_url=http://localhost:4444/wd/hub
 #
 # config for mobile
-#selenium_url=http://localhost:4723
-#capabilities.appPackage=com.google.android.deskclock
-#capabilities.appActivity=com.android.deskclock.DeskClock
-#capabilities.automationName=uiautomator2
-#capabilities.deviceName=emulator-5554
-#capabilities.udid=emulator-5554
-#capabilities.platformName=ANDROID
+PROD.selenium_url=http://localhost:4723
+capabilities.appPackage=com.google.android.deskclock
+capabilities.appActivity=com.android.deskclock.DeskClock
+capabilities.automationName=uiautomator2
+capabilities.deviceName=emulator-5554
+capabilities.udid=emulator-5554
+capabilities.platformName=ANDROID
