finished mobile clock and alarm tests

--- a/src/main/resources/_testdata.properties
+++ b/src/main/resources/_testdata.properties
@@ -5,3 +5,6 @@ standard_user_last_name=Smith
 standard_user_postal_code=12-345
 invalid_credentials_username=sdfskdfjkl
 invalid_credentials_password=fjskfsjdfklsj
+city_for_clock_to_add=Lisbon
+add_alarm_test_hour=13
+add_alarm_test_minute=14
