finished mobile test

--- a/src/main/resources/_testdata.properties
+++ b/src/main/resources/_testdata.properties
@@ -8,3 +8,5 @@ invalid_credentials_password=fjskfsjdfklsj
 city_for_clock_to_add=Lisbon
 add_alarm_test_hour=13
 add_alarm_test_minute=14
+stopwatch_test_wait_seconds=3
+timer_short_test_duration_seconds=5
